<resources>
    <string name="app_name">mylivingtrip</string>
    <string name="title_activity_home_screenn">HomeScreennActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="populardestinations">Popular Destinations</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="oneway">One Way</string>
    <string name="roundtrip">Round Trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">DEPARTURE</string>
    <string name="return_">RETURN</string>
    <string name="travelleras">TRAVELLERS</string>
    <string name="cabinclass">CABIN CLASS</string>
    <string name="Search">Search</string>
    <string name="searchflight">Search Flight</string>
    <string name="search">Search</string>
    <string name="searchdotdot">Search...</string>
    <string name="mytrip">MyTrip</string>
    <string name="offers">Offers</string>
    <string name="tripideas">Trip Ideas</string>
    <string name="checkguidelines">Check Guidelines</string>
    <string name="searchvandfilter">Filter</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sortbyfilter">Sort &amp; Filters</string>
    <string name="price">Price</string>
    <string name="chepestfirst">Cheapest First</string>
    <string name="duration">Duration</string>
    <string name="departuretime">Departure Time</string>
    <string name="shortestfirst">Shortest First</string>
    <string name="earliestfirst">Earliest First</string>
    <string name="arrivaltime">Arrival Time</string>
    <string name="apply">APPLY</string>
    <string name="airline">Airline</string>
    <string name="open">Open</string>
    <string name="return_small">Return</string>
    <string name="departure_small">Departure</string>
    <string name="book">BOOK</string>
    <string name="addnumberoftravellers">ADD NUMBER OF TRAVELLERS</string>
    <string name="adult">Adult</string>
    <string name="selecttravellersandclass">Select Travellers Class</string>
    <string name="yearabove">12 yrs &amp; above</string>
    <string name="onthedayoftravel">on the day of travel</string>
    <string name="children">Children</string>
    <string name="twomustwelyers">2 - 12 yrs</string>
    <string name="infant">Infant</string>
    <string name="yndertwoyer">Under 2 yrs</string>
    <string name="all">All</string>
    <string name="premiumeconomy">PremiumEconomy</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="premiumbusiness">PremiumBusiness</string>
    <string name="first">First</string>
    <string name="done">Done</string>
    <string name="action_search">search</string>
</resources>
