<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.travellersandclass.TravellersandClassActivity">

    <RelativeLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgArror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/imgArror"
            android:layout_toRightOf="@+id/imgArror"
            android:text="@string/selecttravellersandclass"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/llLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/addnumberoftravellers" />

    <RelativeLayout
        android:id="@+id/rlAult"
        android:layout_width="match_parent"
        android:layout_below="@+id/txtTitle"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txtAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/adult"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/txtAdult"
        android:layout_toRightOf="@+id/txtAdult"
        android:text="@string/yearabove"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAdult"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/onthedayoftravel"
        android:textSize="12sp" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardviewoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="-"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/txtMus"
                android:layout_toRightOf="@+id/txtMus"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/txtTotal"
                android:layout_toRightOf="@+id/txtTotal"
                android:padding="5dp"
                android:text="+"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlChildren"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/rlAult"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/children"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/txtChildren"
            android:layout_toRightOf="@+id/txtChildren"
            android:text="@string/twomustwelyers"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtChildren"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/onthedayoftravel"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            card_view:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtMuschildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:text="-"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtTotalChildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/txtMuschildren"
                    android:layout_toRightOf="@+id/txtMuschildren"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtPlusChildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/txtTotalChildren"
                    android:layout_toRightOf="@+id/txtTotalChildren"
                    android:padding="5dp"
                    android:text="+"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlInfrant"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/rlChildren"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtInfant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/infant"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/txtInfant"
            android:layout_toRightOf="@+id/txtInfant"
            android:text="@string/yndertwoyer"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInfant"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/onthedayoftravel"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            card_view:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtMusinfant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:text="-"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtTotalInfrant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/txtMusinfant"
                    android:layout_toRightOf="@+id/txtMusinfant"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtPlusInfant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/txtTotalInfrant"
                    android:layout_toRightOf="@+id/txtTotalInfrant"
                    android:padding="5dp"
                    android:text="+"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlcabinclas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/rlInfrant"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPreminumEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/btnAll"
            android:layout_toRightOf="@+id/btnAll"
            android:background="@drawable/roundbutton"
            android:padding="10dp"
            android:text="@string/premiumeconomy"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btnPreminumEconomy"
            android:layout_toRightOf="@+id/btnPreminumEconomy"
            android:background="@drawable/roundselecter"
            android:padding="10dp"
            android:text="@string/economy"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/btnAll"
            android:layout_toRightOf="@+id/btnAll"
            android:background="@drawable/roundselecter"
            android:padding="10dp"
            android:text="@string/premiumeconomy"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
        <Button
            android:id="@+id/btnBussines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAll"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/roundselecter"
            android:padding="5dp"
            android:text="@string/business"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:ignore="UnknownId" />


        <Button
            android:id="@+id/btnPremiumBussiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAll"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/btnBussines"
            android:layout_toRightOf="@+id/btnBussines"
            android:background="@drawable/roundselecter"
            android:padding="5dp"
            android:text="@string/premiumbusiness"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAll"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/btnPremiumBussiness"
            android:layout_toRightOf="@+id/btnBussiness"
            android:background="@drawable/roundselecter"
            android:padding="5dp"
            android:text="@string/first"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:ignore="UnknownId" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSearch"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlcabinclas"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundsearch"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/Search"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>